@@ -1,5 +1,5 @@
 /*--------------------------------------------------------------------
- *	$Id: gmt_init.c,v 1.526 2011-06-02 18:57:50 guru Exp $
+ *	$Id: gmt_init.c,v 1.527 2011-06-06 04:30:15 guru Exp $
  *
  *	Copyright (c) 1991-2011 by P. Wessel, W. H. F. Smith, R. Scharroo, and J. Luis
  *	See LICENSE.TXT file for copying and redistribution conditions.
@@ -7720,17 +7720,6 @@ struct GMT_CTRL *GMT_begin (char *session, GMT_LONG mode)
 	
 	/* Set default for -n parameters */
 	C->common.n.antialias = TRUE; C->common.n.interpolant = BCR_BICUBIC; C->common.n.threshold = 0.5;
-
-	if (C->PSL) {	/* PSL was initialized */
-		C->PSL->init.unit = PSL_INCH;					/* We use inches internally in PSL */
-		C->PSL->internal.verbose = C->current.setting.verbose;		/* Inherit verbosity level from GMT */
-		PSL_beginsession (C->PSL);					/* Initializes the session and sets a few defaults */
-		/* Reset session defaults to the chosen GMT settings; these are fixed for the entire PSL session */
-#ifdef GMT_COMPAT
-		if (C->current.setting.ps_copies > 1) C->PSL->init.copies = C->current.setting.ps_copies;
-#endif
-		PSL_setdefaults (C->PSL, C->current.setting.ps_dpi, C->current.setting.ps_magnify, C->current.setting.ps_page_rgb);
-	}
 
 	gmt_get_history (C);	/* Process and store command shorthands passed to the application */
 
